Remove `overflow-y-auto` from `html` to avoid interference with the `ModalContainer` component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,7 +24,7 @@
 	}
 
 	html {
-		@apply overflow-y-auto scroll-smooth;
+		@apply scroll-smooth;
 	}
 
 	body {
